Feat: Add circuit breaker to all inter-services communications